--- a/.eslintrc
+++ b/.eslintrc
@@ -5,10 +5,11 @@
     "es2021": true
   },
   "extends": [
-    "eslint:recommended",
-    "plugin:prettier/recommended",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:vue/vue3-recommended"
+    // "prettier",
+    // "eslint:recommended",
+    // "plugin:prettier/recommended",
+    // "plugin:@typescript-eslint/recommended",
+    // "plugin:vue/vue3-recommended"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -16,16 +17,11 @@
       "jsx": true
     },
     "ecmaVersion": "latest",
-    "sourceType": "module"
+    "sourceType": "module",
+    "parser": "babel-eslint"
   },
   "plugins": ["@typescript-eslint", "prettier"],
   "rules": {
     "vue/require-default-prop": "off"
-  },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.vue",
-    "packages/**/*.ts",
-    "packages/**/*.vue"
-  ]
+  }
 }
