--- a/docs/package.json
+++ b/docs/package.json
@@ -7,5 +7,8 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview"
+  },
+  "dependencies": {
+    "@demo/test": "link:@workspace:@demo/test"
   }
 }
